added changes by Ahmad Alwazzan

--- a/roles/fmw-domain/templates/nodemanager.properties
+++ b/roles/fmw-domain/templates/nodemanager.properties
@@ -1,4 +1,4 @@
-DomainsFile=/oracle/fmw12.1.3/config/nodemanagers/adf_domain/nodemanager.domains
+DomainsFile={{ oracle_base }}/config/nodemanagers/adf_domain/nodemanager.domains
 #KeyStores=CustomIdentityAndCustomTrust
 #KeyStores=DemoIdentityAndDemoTrust
 #CustomIdentityKeystoreType=jks
@@ -12,8 +12,8 @@ DomainsFile=/oracle/fmw12.1.3/config/nodemanagers/adf_domain/nodemanager.domains
 LogLimit=0
 PropertiesVersion=12.2.1.3.0
 AuthenticationEnabled=true
-NodeManagerHome=/oracle/fmw12.1.3/config/nodemanagers/adf_domain
-JavaHome=/oracle/fmw12.1.3/jdk1.8.0_172
+NodeManagerHome={{ oracle_base }}/config/nodemanagers/adf_domain
+JavaHome={{ jdk_folder }}
 LogLevel=INFO
 DomainsFileEnabled=true
 StartScriptName=startWebLogic.sh
@@ -29,6 +29,6 @@ LogAppend=true
 StateCheckInterval=500
 CrashRecoveryEnabled=true
 StartScriptEnabled=true
-LogFile=/oracle/fmw12.1.3/config/nodemanagers/adf_domain/nodemanager.log
+LogFile={{ oracle_base }}/config/nodemanagers/adf_domain/nodemanager.log
 LogFormatter=weblogic.nodemanager.server.LogFormatter
 ListenBacklog=50
