--- a/infra-vars.yml
+++ b/infra-vars.yml
@@ -1,22 +1,22 @@
 # Oracle os user and group
-oracle_user: 'oracle'
+oracle_user: 'applmgr'
 oracle_group: 'oinstall'
 # Software and configuration main directory
-oracle_base: '/oracle/fmw12.1.3'
+oracle_base: '/u01/oracle/'
 
 # JDK installer and target folder
-jdk_installation_archive: 'jdk-8u172-linux-x64.tar.gz'
-jdk_folder: '{{ oracle_base }}/jdk1.8.0_172'
+jdk_installation_archive: 'jdk-8u281-linux-x64.tar.gz'
+jdk_folder: '{{ oracle_base }}/jdk1.8.0_281'
 
 # fmw installer
-mw_installer: 'fmw_12.2.1.3.0_infrastructure.jar'
+mw_installer: 'fmw_12.2.1.4.0_infrastructure.jar'
 
 # database settings for repository
-dbserver_name: '192.168.56.102'
+dbserver_name: '192.168.42.20'
 dbserver_port: '1521'
 #dbserver_service: 'pdborcl.private'
 #dbserver_service: 'oradb3.private'
-dbserver_service: 'db.oradb3.private'
+dbserver_service: 'orclcdb'
 repository_prefix: 'wls12c2'
 
 # Domain Name
