--- a/roles/linux-wls/vars/main.yml
+++ b/roles/linux-wls/vars/main.yml
@@ -14,6 +14,10 @@ packages_list:
   - 'ksh'
   - 'make'
   - 'sysstat'
+  - 'libXrender.i686'
+  - 'libXext.i686'
+  - 'libXtst.x86_64'
+
 kernel_params:
         kernel.shmmax: 2147483648
         kernel.shmall: 524288
